# SusanAI

./: CMakeLists.txt  Handlers.cpp  Handlers.h  LemonDrop.cpp  LemonDrop.h  Networks.h  Nodes.cpp  Nodes.h  Structures.cpp  Structures.h  SusanAI.cpp  SusanAI.h  Synapses.cpp  Synapses.h  Trainer.cpp  Trainer.h  Utils.cpp  Utils.h  controller.lsv
